--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv-webpack": "^1.7.0",
     "next": "^9.1.1",
     "react": "^16.10.2",
-    "react-dom": "^16.10.2"
+    "react-dom": "^16.10.2",
+    "react-slick": "^0.25.2"
   }
 }
